完善了查询

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
+.svn
 .settings
 .project
 .classpath
-target
-.swp
-.svn
-log
-.log
-logs
-.logs
 .myeclipse
-*.log
+target
+log
+logs
+**/*.swp
+**/*.logs
+**/*.log
